// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks / Adjacent Post Links Story Integration shall pass integration sanity test | next post only 1`] = `
"<div class=\\"adjacent-post-links-story\\">
  <!---->
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-link-next adjacent-post-links-story__next\\"><span class=\\"adjacent-post-link-next__title\\">timeReading</span> <span class=\\"adjacent-post-link-next__label\\">Następne</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Story Integration shall pass integration sanity test | prev / next post 1`] = `
"<div class=\\"adjacent-post-links-story\\">
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-link-previous adjacent-post-links-story__previous\\"><span class=\\"adjacent-post-link-previous__title\\">timeReading</span> <span class=\\"adjacent-post-link-previous__label\\">Poprzednie</span></nuxtlink>
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-link-next adjacent-post-links-story__next\\"><span class=\\"adjacent-post-link-next__title\\">timeReading</span> <span class=\\"adjacent-post-link-next__label\\">Następne</span></nuxtlink>
</div>"
`;

exports[`Blocks / Adjacent Post Links Story Integration shall pass integration sanity test | prev post only 1`] = `
"<div class=\\"adjacent-post-links-story\\">
  <nuxtlink to=\\"/opowiadania/mock-post/\\" class=\\"adjacent-post-link-previous adjacent-post-links-story__previous\\"><span class=\\"adjacent-post-link-previous__title\\">timeReading</span> <span class=\\"adjacent-post-link-previous__label\\">Poprzednie</span></nuxtlink>
  <!---->
</div>"
`;
